--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,10 @@
   "name": "todo-app",
   "main": "index.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "form-task":"https://github.com/polymer-practice/adrian-form-task.git",
+    "task-list":"https://github.com/polymer-practice/horacio-task-list.git",
+    "task-repository":"https://github.com/polymer-practice/horacio-task-repository.git"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
